--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
     text-align: center;
 }
@@ -6,6 +11,27 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.buttons-container {
+    padding: 30px 0;
+}
+
+button {
+    width: 130px;
+    height: 30px;
+    cursor: pointer;
+    background-color: plum;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 5px 8px -4px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 5px 8px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 5px 8px -4px rgba(0,0,0,0.75);
+    font-size: 14px;
+}
+
+button:hover {
+    scale: 1.02;
 }
 
 .container {
