--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,15 @@ body {
     align-items: center;
 }
 
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .buttons-container {
     padding: 30px 0;
 }
@@ -34,7 +43,7 @@ button:hover {
     scale: 1.02;
 }
 
-.container {
+.etch-a-sketch-container {
     width: 600px;
     height: 600px;
     margin: 0 auto;
